
cc_library(
    name = "solver",
    srcs = [
        "fit.cpp",
        "floor.cpp",
        "guessing.cpp",
        "solver.cpp",
    ],
    hdrs = [
        "fit.hpp",
        "floor.hpp",
        "guessing.hpp",
        "solver.hpp",
    ],
    includes = [
        ".",
    ],
    deps = [
        "@opencv",
        "//libraries/opencv_utils",
        "//libraries/geometry",
        "//components/falcons/localization-vision:datatypes",
    ],
    visibility = ["//visibility:public"],
)

