cc_library(
    name = "data",
    hdrs = [
        "include/VelocityControlData.hpp",
        "include/MRAbridge.hpp",
    ],
    includes = [
        "include",
    ],
    deps = [
        "//components/falcons/velocity-control:datatypes",
        "//libraries/geometry",
    ],
)

cc_library(
    name = "common_headers",
    hdrs = [
        "include/AbstractVelocitySetpointController.hpp",
        "include/VelocityControlExceptions.hpp",
        "include/exception_base.hpp",
    ],
)

cc_library(
    name = "controllers",
    srcs = [
        "include/SPGVelocitySetpointController.hpp",
        "src/controllers/LinearVelocitySetpointController.cpp",
        "src/controllers/SPGVelocitySetpointController.cpp",
    ],
    hdrs = [
        "include/VelocitySetpointControllers.hpp",
    ],
    includes = [
        "include",
    ],
    deps = [
        ":common_headers",
        ":data",
        "//libraries/reflexxes",
    ],
)

cc_library(
    name = "algorithms",
    srcs = [
        "src/algorithms/CheckPrepareInputs.cpp",
        "src/algorithms/ConfigureLimits.cpp",
        "src/algorithms/Deadzone.cpp",
        "src/algorithms/SelectVelocityController.cpp",
        "src/algorithms/ShiftBallOffset.cpp",
        "src/algorithms/CalculateVelocity.cpp",
        "src/algorithms/SetOutputsPrepareNext.cpp",
    ],
    hdrs = [
        "include/VelocityControlAlgorithms.hpp",
    ],
    includes = [
        "include",
    ],
    deps = [
        ":data",
        ":common_headers",
        ":controllers",
    ],
)

cc_library(
    name = "VelocityControl",
    srcs = [
        "src/VelocityControl.cpp",
    ],
    hdrs = [
        "include/VelocityControl.hpp",
    ],
    includes = [
        "include",
    ],
    deps = [
        ":data",
        ":controllers",
        ":algorithms",
    ],
    visibility = ["//visibility:public"],
)

